clap/backends/clap-triton/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clap-triton-api
spec:
  type: ClusterIP
  selector:
    app: clap-triton-api
  ports:
  - port: 80
    targetPort: 8000
