clap/backends/clap-triton/k8s/triton-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clap-triton-server
spec:
  type: ClusterIP
  selector:
    app: clap-triton-server
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  - name: grpc
    port: 8001
    targetPort: 8001
  - name: metrics
    port: 8002
    targetPort: 8002
