clap/backends/clap-triton/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clap-triton
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: clap-triton.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clap-triton-api
            port:
              number: 80
